--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,15 @@ header > .interface{
 }
 
 header a{
-    color: #fff;
+    color: #5c5c5c;
     text-decoration: none;
+    display: inline-block;
+    transition: .2s;
+} 
+
+header a:hover{
+    color: #fff;
+    transform: scale(1.05);
 }
 
 header nav ul{
@@ -41,7 +48,16 @@ header nav ul li{
     padding: 0 40px;
 }
 
-header .btn-contato{
+header .btn-contato button{
     padding: 10px 40px;
-    
+    font-size: 18px;
+    font-weight: 600px;
+    background-color: #00FF08;
+    border: 0;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+header .btn-contato button:hover{
+    box-shadow: 0px 0px 8px #2bff00; 
 }
