--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,15 @@ body{
     display: flex;
 }
 
+h2.titulo{
+    color: #fff;
+    font-size: 32px;
+    text-align: center;
+}
+
+h2.titulo span{
+    color: #2bff00;
+}
 /* ESTILO DO CABEÇALHO */
 header{
     padding: 40px 4%;
@@ -102,3 +111,23 @@ section.topo-do-site .flex{
     100%{top: 30px}
 }
 
+/* ESTILO DAS ESPECIALIDADES */
+section.especialidades{
+    padding: 40px 4%;
+    margin: 30px 0;
+}
+
+.especialidades .especialidades-box{
+    color: #fff;
+    pad: 40px;
+}
+
+.especialidades .especialidades-box i{
+    font-size: 65px;
+    color: #2bff00;
+}
+
+.especialidades .especialidades-box h3{
+    font-size: 28px;
+    margin: 15px 0;
+}
