--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ section.especialidades .flex{
     border-radius: 20px;
     margin-top: 45px;
     transition: .2s;
+    text-align: center;
 }
 
 .especialidades .especialidades-box:hover{
